--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,21 @@ yarn-error.log*
 
 # ui
 dist/
+
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# turbo
+.turbo
+
+# ui
+dist/
+
+# ignore any .rnv files or folders
+*.rnv
+.rnv/
+
