created the controller for the room

--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
-    "common_backend":"workspace:*",
+    "@types/cookie-parser": "^1.4.9",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "common_backend": "workspace:*",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node-dev": "^2.0.0"
   },
   "keywords": [],
